--- a/package.json
+++ b/package.json
@@ -1,51 +1,56 @@
 {
-  "name": "v3-tour",
-  "version": "3.1.2",
+  "name": "@thatzokay/v3-tour",
+  "version": "4.0.0",
   "description": "v3-tour is a lightweight, simple and customizable tour plugin for use with Vue.js. It provides a quick and easy way to guide your users through your application.",
-  "author": "Sitronik <sitronik92@mail.ru>",
+  "author": "ThatzOkay <noduhgamingxd@gmail.com>",
   "license": "MIT",
   "main": "dist/v3-tour.es.js",
   "module": "dist/v3-tour.umd.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/sitronik/v3-tour.git"
+    "url": "git+https://github.com/ThatzOkay/v3-tour.git"
   },
-  "typings": "types/index.d.ts",
+  "typings": "dist/types/index.d.ts",
   "keywords": [
     "vue",
     "tour"
   ],
-  "homepage": "https://github.com/sitronik/v3-tour.git",
+  "homepage": "https://github.com/ThatzOkay/v3-tour",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vite build",
+    "dev": "cross-env MODE=demo npm run vite",
+    "vite": "vite",
+    "clean": "rimraf dist",
+    "build": "npm run clean && npm run build:lib && npm run build:tsc",
+    "build:lib": "cross-env MODE=lib vite build",
+    "build:tsc": "vue-tsc --emitDeclarationOnly",
+    "build:demo": "cross-env MODE=demo vite build",
     "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint"
+    "lint": "eslint ",
+    "lint:fix": "eslint --fix "
   },
   "dependencies": {
-    "@popperjs/core": "^2.11.0",
+    "@popperjs/core": "^2.11.8",
     "hash-sum": "^2.0.0",
     "jump.js": "^1.0.2"
   },
   "devDependencies": {
-    "@rollup/plugin-dynamic-import-vars": "^1.1.1",
-    "@vitejs/plugin-vue": "^1.2.1",
-    "@vue/cli-plugin-babel": "^5.0.0-alpha.8",
-    "@vue/cli-plugin-eslint": "^4.5.12",
-    "@vue/cli-plugin-unit-jest": "^5.0.0-alpha.8",
-    "@vue/cli-service": "^4.5.11",
-    "@vue/compiler-sfc": "^3.0.11",
-    "@vue/eslint-config-standard": "^4.0.0",
-    "@vue/test-utils": "^2.0.0-rc.4",
-    "babel-eslint": "^10.1.0",
-    "core-js": "^3.9.1",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "sass": "^1.32.8",
-    "sass-loader": "^8.0.2",
-    "vite": "^2.1.5",
-    "vue": "^3.0.11",
-    "webpack": "^4.46.0",
-    "rollup-plugin-copy": "^3.4.0"
+    "@eslint/js": "^9.31.0",
+    "@rollup/plugin-dynamic-import-vars": "^2.1.5",
+    "@types/jump.js": "^1.0.6",
+    "@vitejs/plugin-vue": "^6.0.0",
+    "@vue/tsconfig": "^0.7.0",
+    "core-js": "^3.44.0",
+    "cross-env": "^7.0.3",
+    "eslint": "^9.30.1",
+    "eslint-plugin-vue": "^10.3.0",
+    "globals": "^16.3.0",
+    "rimraf": "^6.0.1",
+    "rollup-plugin-copy": "^3.5.0",
+    "sass": "^1.89.2",
+    "sass-loader": "^16.0.5",
+    "typescript-eslint": "^8.38.0",
+    "vite": "^7.0.4",
+    "vue": "^3.5.17",
+    "vue-tsc": "^3.0.1"
   }
 }
