--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "rollup-plugin-copy": "^3.5.0",
     "sass": "^1.89.2",
     "sass-loader": "^16.0.5",
+    "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
     "vite": "^7.0.6",
     "vue": "^3.5.18",
